--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             Nested albums, if any
           -->
           <div id="albums" class="justified-gallery">
-        <a href="old_mowog_pics.html">
-                <img src="media/small/old_mowog_pics/IMG_1479.jpeg" alt="">
+        <a href="2015_old_mowog_pics.html">
+                <img src="media/small/2015_old_mowog_pics/IMG_1479.jpeg" alt="">
                 <div class="caption" style="display: inline-block">
-                  <h3>old_mowog_pics</h3>
+                  <h3>2015_old_mowog_pics</h3>
                   <div class="summary">20 photos</div>
                 </div>
               </a><a href="2019_MOWOG_XMAS.html">
