changed sort order I hope

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             Nested albums, if any
           -->
           <div id="albums" class="justified-gallery">
-        <a href="2015_old_mowog_pics.html">
-                <img src="media/small/2015_old_mowog_pics/IMG_1479.jpeg" alt="">
-                <div class="caption" style="display: inline-block">
-                  <h3>2015_old_mowog_pics</h3>
-                  <div class="summary">20 photos</div>
-                </div>
-              </a><a href="2019_MOWOG_XMAS.html">
+        <a href="2019_MOWOG_XMAS.html">
                 <img src="media/small/2019_MOWOG_XMAS/DSC_0699.jpg" alt="">
                 <div class="caption" style="display: inline-block">
                   <h3>2019_MOWOG_XMAS</h3>
                   <div class="summary">32 photos</div>
+                </div>
+              </a><a href="2015_old_mowog_pics.html">
+                <img src="media/small/2015_old_mowog_pics/IMG_1479.jpeg" alt="">
+                <div class="caption" style="display: inline-block">
+                  <h3>2015_old_mowog_pics</h3>
+                  <div class="summary">20 photos</div>
                 </div>
               </a>  </div>
         
