added british car day

--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
             Nested albums, if any
           -->
           <div id="albums" class="justified-gallery">
-        <a href="2019_MOWOG_XMAS.html">
+        <a href="2020_02_09-British-and-Euro-Car-Day.html">
+                <img src="media/small/2020_02_09 - British and Euro Car Day/IMG_3862.JPG" alt="">
+                <div class="caption" style="display: inline-block">
+                  <h3>2020_02_09 - British and Euro Car Day</h3>
+                  <div class="summary">29 photos</div>
+                </div>
+              </a><a href="2019_MOWOG_XMAS.html">
                 <img src="media/small/2019_MOWOG_XMAS/DSC_0699.jpg" alt="">
                 <div class="caption" style="display: inline-block">
                   <h3>2019_MOWOG_XMAS</h3>
