added staglands pics

--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
             Nested albums, if any
           -->
           <div id="albums" class="justified-gallery">
-        <a href="2020_02_23-February_Funkhana.html">
+        <a href="2020_06_28_MOWOG_does_Staglands.html">
+                <img src="media/small/2020_06_28_MOWOG_does_Staglands/106271252_192990655439309_8685426640305774463_n.jpg" alt="">
+                <div class="caption" style="display: inline-block">
+                  <h3>2020_06_28_MOWOG_does_Staglands</h3>
+                  <div class="summary">11 photos</div>
+                </div>
+              </a><a href="2020_02_23-February_Funkhana.html">
                 <img src="media/small/2020_02_23-February_Funkhana/1.jpg" alt="">
                 <div class="caption" style="display: inline-block">
                   <h3>2020_02_23-February_Funkhana</h3>
