--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
             Nested albums, if any
           -->
           <div id="albums" class="justified-gallery">
-        <a href="2020_08_22_mowog_te_horo.html">
+        <a href="2020_09_20-Mini_coffee_bar.html">
+                <img src="media/small/2020_09_20-Mini_coffee_bar/DSC_1543.jpg" alt="">
+                <div class="caption" style="display: inline-block">
+                  <h3>2020_09_20-Mini_coffee_bar</h3>
+                  <div class="summary">25 photos</div>
+                </div>
+              </a><a href="2020_08_22_mowog_te_horo.html">
                 <img src="media/small/2020_08_22_mowog_te_horo/IMG_4017.jpg" alt="">
                 <div class="caption" style="display: inline-block">
                   <h3>2020_08_22_mowog_te_horo</h3>
