--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
             Nested albums, if any
           -->
           <div id="albums" class="justified-gallery">
-        <a href="2020_09_20-Mini_coffee_bar.html">
+        <a href="2020_10_15-October_MG_Classic.html">
+                <img src="media/small/2020_10_15-October_MG_Classic/124888190_387939302398696_3133374237725541429_n.jpg" alt="">
+                <div class="caption" style="display: inline-block">
+                  <h3>2020_10_15-October_MG_Classic</h3>
+                  <div class="summary">24 photos</div>
+                </div>
+              </a><a href="2020_09_20-Mini_coffee_bar.html">
                 <img src="media/small/2020_09_20-Mini_coffee_bar/DSC_1543.jpg" alt="">
                 <div class="caption" style="display: inline-block">
                   <h3>2020_09_20-Mini_coffee_bar</h3>
